# Mall_Merge

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
include/: constants.h  drag.h  game_state.h  generator.h  input.h  item.h  items.h  render.h  task.h
src/: drag.c  game_state.c  generator.c  input.c  item.c  items.c  main.c  render.c  task.c
